--- a/composer.json
+++ b/composer.json
@@ -56,6 +56,12 @@
         "phpstan": [
             "@php bin/console cache:warmup --env=test",
             "phpstan analyse -c phpstan.neon --memory-limit 1G"
+        ],
+        "ccs": "pint --config pint.json -v --test",
+        "fcs": "pint --config pint.json",
+        "ci": [
+            "@phpstan",
+            "@ccs"
         ]
     },
     "conflict": {
@@ -68,6 +74,7 @@
         }
     },
     "require-dev": {
+        "laravel/pint": "^1.14",
         "phpstan/extension-installer": "^1.3",
         "phpstan/phpstan": "^1.10",
         "phpstan/phpstan-deprecation-rules": "^1.1",
