--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -1,28 +1,36 @@
 # see https://symfony.com/doc/current/reference/configuration/framework.html
 framework:
-    secret: '%env(APP_SECRET)%'
-    #csrf_protection: true
-    annotations: false
-    http_method_override: false
-    handle_all_throwables: true
+  secret: '%env(APP_SECRET)%'
+  #csrf_protection: true
+  annotations: false
+  http_method_override: false
+  handle_all_throwables: true
 
-    # Enables session support. Note that the session will ONLY be started if you read or write from it.
-    # Remove or comment this section to explicitly disable session support.
-    session:
-        handler_id: null
-        cookie_secure: auto
-        cookie_samesite: lax
+  # Enables session support. Note that the session will ONLY be started if you read or write from it.
+  # Remove or comment this section to explicitly disable session support.
+  session:
+    handler_id: null
+    cookie_secure: auto
+    cookie_samesite: lax
 
-    #esi: true
-    #fragments: true
-    php_errors:
-        log: true
+  #esi: true
+  #fragments: true
+  php_errors:
+    log: true
 
-    assets:
-        version_strategy: 'Pentatrion\ViteBundle\Asset\ViteAssetVersionStrategy'
+  assets:
+    version_strategy: 'Pentatrion\ViteBundle\Asset\ViteAssetVersionStrategy'
+
+  http_client:
+    scoped_clients:
+      http_client.recruitis:
+        base_uri: '%env(RECRUITIS_API_URL)%'
+        headers:
+          Accept: 'application/json'
+          Authorization: 'Bearer %env(RECRUITIS_API_TOKEN)%'
 
 when@test:
-    framework:
-        test: true
-        session:
-            storage_factory_id: session.storage.factory.mock_file
+  framework:
+    test: true
+    session:
+      storage_factory_id: session.storage.factory.mock_file
