--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "php": ">=8.1",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "nette/utils": "^4.0",
         "pentatrion/vite-bundle": "^6.4",
         "symfony/asset": "6.4.*",
         "symfony/console": "6.4.*",
