--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "nette/utils": "^4.0",
         "pentatrion/vite-bundle": "^6.4",
         "symfony/asset": "6.4.*",
+        "symfony/cache": "6.4.*",
         "symfony/console": "6.4.*",
         "symfony/dotenv": "6.4.*",
         "symfony/flex": "^2",
