--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,7 @@
 /node_modules/
 /public/build/
 ###< pentatrion/vite-bundle ###
+
+###> symfony/phpunit-bridge ###
+.phpunit.result.cache
+###< symfony/phpunit-bridge ###
