--- a/composer.json
+++ b/composer.json
@@ -67,9 +67,11 @@
         ],
         "ccs": "pint --config pint.json -v --test",
         "fcs": "pint --config pint.json",
+        "test": "vendor/bin/phpunit --no-progress --testdox",
         "ci": [
             "@phpstan",
-            "@ccs"
+            "@ccs",
+            "@test"
         ]
     },
     "conflict": {
@@ -88,8 +90,12 @@
         "phpstan/phpstan-deprecation-rules": "^1.1",
         "phpstan/phpstan-strict-rules": "^1.5",
         "phpstan/phpstan-symfony": "^1.3",
+        "phpunit/phpunit": "^10.0",
+        "symfony/browser-kit": "6.4.*",
+        "symfony/css-selector": "6.4.*",
         "symfony/debug-bundle": "6.4.*",
         "symfony/maker-bundle": "^1.56",
+        "symfony/phpunit-bridge": "^7.0",
         "symfony/stopwatch": "6.4.*",
         "symfony/web-profiler-bundle": "6.4.*"
     }
