--- a/.env.test
+++ b/.env.test
@@ -4,3 +4,6 @@ APP_SECRET='$ecretf0rt3st'
 SYMFONY_DEPRECATIONS_HELPER=999999
 PANTHER_APP_ENV=panther
 PANTHER_ERROR_SCREENSHOT_DIR=./var/error-screenshots
+
+RECRUITIS_API_URL=https://xxx/
+RECRUITIS_API_TOKEN=xxx
