--- a/package.json
+++ b/package.json
@@ -1,16 +1,21 @@
 {
-    "type": "module",
-    "private": true,
-    "scripts": {
-        "dev": "vite",
-        "build": "vite build"
-    },
-    "devDependencies": {
-        "sass": "^1.72.0",
-        "vite": "^5.0",
-        "vite-plugin-symfony": "^6.4"
-    },
-    "dependencies": {
-        "bootstrap": "^5.3.3"
-    }
+  "type": "module",
+  "private": true,
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "format": "npx prettier . --write",
+    "format:check": "npx prettier . --check"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-vue": "^5.0.4",
+    "prettier": "^3.2.5",
+    "sass": "^1.72.0",
+    "vite": "^5.0",
+    "vite-plugin-symfony": "^6.4"
+  },
+  "dependencies": {
+    "bootstrap": "^5.3.3",
+    "vue": "^3.4.21"
+  }
 }
