--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "vite-plugin-symfony": "^6.4"
   },
   "dependencies": {
+    "@vueuse/core": "^10.9.0",
+    "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "vue": "^3.4.21"
   }
